@@ -1,6 +1,7 @@
 // Low-level functions for atomic operations: IA64 version  -*- C++ -*-
 
-// Copyright (C) 2000, 2001, 2003, 2004 Free Software Foundation, Inc.
+// Copyright (C) 2000, 2001, 2003, 2004, 2005
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -28,7 +29,6 @@
 // the GNU General Public License.
 
 #include <bits/atomicity.h>
-#include <ia64intrin.h>
 
 namespace __gnu_cxx
 {
